# 781-Project

./: .gitignore  README.md  pyproject.toml  temp.csv
Docs/Final_Report/: sigkddExp.aux  sigkddExp.bbl  sigkddExp.blg  sigkddExp.out  sigkddExp.synctex(busy)  sigkddExp.tex  sigproc.bib
Docs/Forensic_Journal/: README.md  elsarticle-template-harv.aux  elsarticle-template-harv.bbl  elsarticle-template-harv.blg  elsarticle-template-harv.out  elsarticle-template-harv.tex  myBibFile.bib
Docs/papers/: Phishing Websites Features.docx  ~$ishing Websites Features.docx
common_crawl/: common_crawl.py  wat_extract.py
configs/: logging_config.json
configs/features/: features_15.json  features_20.json  features_29.json  final_features.json
data/: ~$ishing Websites Features.docx
data/collected/: README.md  phished.csv  time_data.json  time_weights.json
data/common_crawl/: collected_data.csv  rerun_rank.csv
data/phishtank/: collected_data.csv  open_phish.csv  open_phish_2.csv  open_phish_3.csv  open_phish_4.csv
data/processed/: final.csv  final_lgr.csv  final_ref.csv  phish_data.csv  valid_data.csv
data/test_final/: live_test.csv  open_phish_unseen.csv  sample.py
local-chrome-extension/: background.js  content.js  manifest.json  popup.js
mlruns/0/: meta.yaml
notebooks/: decision_tree.ipynb  eda.ipynb  feature_selection.ipynb  hyper_parameter_tuning.ipynb  indicators.ipynb  inidcators.ipynb  logistic_regression.ipynb  preprocess.ipynb  project_note.ipynb  xgboost.ipynb
scraper/: extract_collected.py  rules.py  run_live_test.py  scrape.py
scripts/: common_crawl.py  count_https.py  general.py  prepare.py  scan.py  store_known.py
src/: main.py
src/hyper/: k_fold.py
(+6897 files in other folders)
