[tool.poetry]
name = "781-project"
version = "0.1.0"
description = "This is my 781 Project 2024"
authors = ["nathanMils <106823768+nathanMils@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
detector = "scripts.main:main"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
ucimlrepo = "^0.0.7"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
tabulate = "^0.9.0"
mlflow = "^2.17.2"
imblearn = "^0.0"
joblib = "^1.4.2"
python-whois = "^0.9.4"
flask = "^3.0.3"
memory-profiler = "^0.61.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
urllib3 = "^2.2.3"
pyopenssl = "^24.2.1"
certifi = "^2024.8.30"
python-dateutil = "^2.9.0.post0"
flask-cors = "^5.0.0"
dnspython = "^2.7.0"
python-dotenv = "^1.0.1"
psutil = "^6.1.0"
xgboost = "^2.1.2"
selenium = "^4.26.1"
tqdm = "^4.67.0"
httpx = "^0.27.2"
warcio = "^1.7.4"
tldextract = "^5.1.3"
coloredlogs = "^15.0.1"
python-levenshtein = "^0.26.1"
fuzzywuzzy = "^0.18.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
